# Archive3D-Metz

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
docs/: ops-config.md  release-checklist.md
docs/superpowers/plans/: 2026-07-16-svelte5-runes-migration.md
docs/superpowers/specs/: 2026-07-16-svelte5-runes-migration-design.md
scripts/release/: macos-sign-notarize.sh  macos-sign-self.sh  windows-self-sign.ps1  windows-sign.ps1
src-tauri/: Cargo.toml  metadata-presets.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  fs_safety.rs  logging.rs  main.rs  statistics.rs  validation.rs
src/lib/api/: deposit.ts
src/lib/components/: ComboInput.svelte  DepositCard.svelte  MetadataEditor.svelte  UpdateModal.svelte
src/lib/components/archive/: Archive3DViewer.svelte  ArchiveMetadataPanel.svelte
src/lib/components/domain/depot/: DepositStepOperation.svelte  DepositStepRecap.svelte  DepositStepStructure.svelte  DepositStepper.svelte  FileDropZone.svelte
src/lib/stores/: auth.svelte.ts  auth.ts
src/lib/types/: deposit.ts  fs.ts  validation.ts
src/lib/utils/: file.ts  path.ts
src/routes/: +layout.svelte  +page.svelte  spaces.css
src/routes/archive/: +page.svelte
src/routes/depot/: +page.svelte
src/routes/login/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/setup/: +page.svelte
src/routes/tutorial/: +page.svelte
src/routes/validation/: +page.svelte
