[package]
name = "archive-metz"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
gltf = { version = "1", features = ["utils"] }
tauri-plugin-store = "2.4.2"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.4"
dunce = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
